--- a/source/Views/GridViewGameOverview.xaml
+++ b/source/Views/GridViewGameOverview.xaml
@@ -57,18 +57,18 @@
                                     </Style>
                                 </DockPanel.Style>
 
-                                <Grid DockPanel.Dock="Top" Tag="{PluginSettings Plugin=ExtraMetadataLoader, Path=EnableLogos}">
+                                <Grid DockPanel.Dock="Top">
                                     <Grid.Style>
                                         <Style TargetType="Grid">
                                             <Setter Property="Visibility" Value="Collapsed" />
                                             <Style.Triggers>
-                                                <DataTrigger Binding="{Binding RelativeSource={RelativeSource Self}, Path=Tag}" Value="True">
+                                                <DataTrigger Binding="{PluginSettings Plugin=ExtraMetadataLoader, Path=EnableLogos, TargetNullValue=False}" Value="True">
                                                     <Setter Property="Visibility" Value="Visible" />
                                                 </DataTrigger>
                                             </Style.Triggers>
                                         </Style>
                                     </Grid.Style>
-                                    <Border Padding="10,5,10,10" Height="{PluginSettings Plugin=ExtraMetadataLoader, Path=LogoMaxHeight}" MaxWidth="{PluginSettings Plugin=ExtraMetadataLoader, Path=LogoMaxWidth}">
+                                    <Border Padding="10,5,10,10" Height="{PluginSettings Plugin=ExtraMetadataLoader, Path=LogoMaxHeight, TargetNullValue=0}" MaxWidth="{PluginSettings Plugin=ExtraMetadataLoader, Path=LogoMaxWidth, TargetNullValue=0}">
                                         <ContentControl x:Name="ExtraMetadataLoader_LogoLoaderControl" />
                                     </Border>
                                 </Grid>
@@ -270,7 +270,7 @@
 
                                         <!--#region SuccessStory-->
                                         <StackPanel DockPanel.Dock="Top"  Margin="5,15,5,0" Style="{DynamicResource PluginStackpanelVisibility}"
-                                                    Tag="{PluginSettings Plugin=SuccessStory, Path=HasData}">
+                                                    Tag="{PluginSettings Plugin=SuccessStory, Path=HasData, TargetNullValue=False}">
                                             <TextBlock Text="{DynamicResource LOCSuccessStoryAchievements}" Style="{DynamicResource BaseTextBlockStyle}"
                                                        FontWeight="Bold" FontSize="{DynamicResource FontSizeLarge}" />
                                             <Separator Background="{DynamicResource HighlightGlyphBrush}" Margin="0,5,0,5"/>
@@ -300,7 +300,7 @@
 
                                         <!--#region ScreenshotsVisualizer-->
                                         <StackPanel DockPanel.Dock="Top" Margin="5,15,5,0" Style="{DynamicResource PluginStackpanelVisibility}"
-                                                    Tag="{PluginSettings Plugin=ScreenshotsVisualizer, Path=HasData}">
+                                                    Tag="{PluginSettings Plugin=ScreenshotsVisualizer, Path=HasData, TargetNullValue=False}">
                                             <TextBlock Text="{DynamicResource LOCSsvTitle}"
                                                        FontWeight="Bold" FontSize="{DynamicResource FontSizeLarge}" Style="{DynamicResource BaseTextBlockStyle}" />
                                             <Separator Background="{DynamicResource HighlightGlyphBrush}" Margin="0,5,0,5"/>
@@ -310,7 +310,7 @@
                                         <!--#endregion -->
                                         <!--#region GameActivity-->
                                         <StackPanel DockPanel.Dock="Top"  Margin="5,15,5,0" Style="{DynamicResource PluginStackpanelVisibility}"
-                                                    Tag="{PluginSettings Plugin=GameActivity, Path=HasData}">
+                                                    Tag="{PluginSettings Plugin=GameActivity, Path=HasData, TargetNullValue=False}">
                                             <TextBlock Text="{DynamicResource LOCGameActivityTitle}"
                                                        FontWeight="Bold" FontSize="{DynamicResource FontSizeLarge}" Style="{DynamicResource BaseTextBlockStyle}" />
                                             <Separator Background="{DynamicResource HighlightGlyphBrush}" Margin="0,5,0,5"/>
