Adjustments to DuplicateHider extension item styles

--- a/source/DerivedStyles/DetailsViewItemTemplate.xaml
+++ b/source/DerivedStyles/DetailsViewItemTemplate.xaml
@@ -114,8 +114,8 @@
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
                             <Setter Property="Border.Visibility" Value="Visible" TargetName="IconBackground"/>
-                            <Setter Property="Border.Background" Value="{DynamicResource OpaqueHighlightBrushBright}" TargetName="IconBackground"/>
-                            <Setter Property="Border.Opacity" Value="1" TargetName="IconBackground"/>
+                            <Setter Property="Border.Background" Value="{DynamicResource GridItemBackgroundBrush}" TargetName="IconBackground"/>
+                            <Setter Property="Border.Opacity" Value="0.3" TargetName="IconBackground"/>
                             <Setter Property="Effect" Value="{StaticResource glowEffect}" />
                             <Trigger.EnterActions>
                                 <BeginStoryboard>
@@ -142,8 +142,8 @@
                         </Trigger>
                         <DataTrigger Binding="{Binding IsCurrent}" Value="True">
                             <Setter Property="Border.Visibility" Value="Visible" TargetName="IconBackground"/>
-                            <Setter Property="Border.Background" Value="{DynamicResource OpaqueHighlightBrush}" TargetName="IconBackground"/>
-                            <Setter Property="Border.Opacity" Value="1" TargetName="IconBackground"/>
+                            <Setter Property="Border.Background" Value="{DynamicResource GridItemBackgroundBrush}" TargetName="IconBackground"/>
+                            <Setter Property="Border.Opacity" Value="0.6" TargetName="IconBackground"/>
                         </DataTrigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
